--- a/src/gui/resource/qss/dark/property_panel.qss
+++ b/src/gui/resource/qss/dark/property_panel.qss
@@ -6,14 +6,12 @@
 
 #PropertyTitle {
     color: white;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 8px;
 }
 
 #PropertyScroll {
     background-color: transparent;
-    border: none;
+    border: 1px solid rgba(255, 255, 255, 0.08);
+    border-radius: 8px;
 }
 
 QScrollArea {
